...
            style="@style/CardTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Vehicle"/>

        <Spinner
            android:id="@+id/spinnerVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
...
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:paddingBottom="4dp"/>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chartOdometerTime"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

...
                    style="@style/CardTitleText"
                    android:text="Total MPG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    style="@style/CardValueText"
                    android:id="@+id/txtTotalMPG"
                    android:text="0 mpg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Name"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVehicleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Year"
                app:boxBackgroundMode="outline">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                android:layout_weight="1"
                android:hint="Make"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundMode="outline">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Model"
                app:boxBackgroundMode="outline">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Save Vehicle"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btnDeleteVehicle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Delete Vehicle"
                    android:backgroundTint="@color/error"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnAddVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add a New Vehicle"/>

            <Button
                android:id="@+id/logoutButton"
...
