<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <include
            android:id="@+id/topAppBar"
            layout="@layout/go_back_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvFuelLogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="Add Fuel Entry"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vehicle"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/spinnerVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etFuelDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:background="?android:attr/editTextBackground"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cost/gal"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etFuelPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:background="?android:attr/editTextBackground"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gallons"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etFuelAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:background="?android:attr/editTextBackground"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Cost"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etTotalCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:background="?android:attr/editTextBackground"
                    android:padding="8dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Odometer Reading"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etOdometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="?android:attr/editTextBackground"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fill-up %"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>

        <SeekBar
            android:id="@+id/seekBarFillPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progressTint="@color/primary"
            android:progressBackgroundTint="@color/secondary"
            android:splitTrack="false"
            android:layout_margin="16dp"
            android:scaleY="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnScanPump"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scan Gas Pump"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/onSurface"
            app:icon="@drawable/ic_camera"
            app:iconPadding="8dp"
            app:iconGravity="textStart" />

        <Button
            android:id="@+id/btnSaveFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Fuel Log" />

    </LinearLayout>
</ScrollView>